# hammer_systems_task

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
api/: urls.py
api/v1/: serializers.py
api/v1/auth/: schema.py  serializers.py  urls.py  views.py
api/v1/profiles/: schema.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
core/: models.py  utils.py
docs/: referral_system.postman_collection.json  technical-assignment.md
infra/dev/: README.md  docker-compose.yml
infra/prod/: .env.example  README.md  docker-compose.yml
infra/prod/nginx/configs/: site.conf
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
pg-initdb/: pg_create_schema.sql
sms/: __init__.py  message.py
sms/backends/: apibased.py  base.py  console.py  filebased.py
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py  0002_user_last_texted.py
